v0.5 (...)
[...]
	-Added the following new functions:
		(boundary) hfssAssignImpedance(...) (thanks Rounak Singh Narde).
		(boundary) hfssEditFloquetPort(...)
		(boundary) hfssEditSlave(...)
		(analysis) hfssSweepAnalysis(...)
		(analysis) hfssSolveSweepAnalysis(...)
		(general)  hfssSetVariable(...) (thanks Rounak Singh Narde).
		(general)  hfssAssignSizeVariable(...)
		(general)  hfssAssignPositionVariable(...)
	-Added phi and theta (scan angle) as input variables in hfssAssignSlave.
	-hfssSetVariable now allows to assign a variable as a function of other variables.
	-Fixed examples to lastest AnsysEM version.
	-Fixed closed polyline assignment.
	-Floquet port: 3D refinement enabled by default.
	-Fixes in hfssAssignSlave documentation.
	-Removed miscellaneous semicolons and commas from some files.

v0.4 (06-October-2014)
[Nothing lasts forever]
    - Added new function hfssSweepAlongVector.
    - Added hfssAssignLumpedRLC to boundary/ (thanks Pablo).
    - Added option to clone parts in hfssSubstract.
    - Added option for closed polylines.
    - Fixed crash in hfssAssignLumpedRLC (thanks Pablo).
    - Fixed representation of polylines.

v0.3 (17-September-2013)
[Better late than never]
	- Added the following functions to boundary/ (thanks Pablo):
		hfssAssignMaster(...)
		hfssAssignSlave(...)
		hfssAssignFloquetPort(...)
	- Created global CHANGELOG file.
	- Added long-missing function hfssCalcStack(...) to fieldsCalculator/.
	- Added function hfssRemovePaths(...) to root directory.
	- Added relative path functionality to hfssIncludePaths(...) in root directory.
	- Fixed and reworked examples files and directories.
    - Added hfssThickenSheet function to 3dmodeler/ (thanks to Franz Schroeder)

v0.2 (28-May-2013)
[This is the first version with public download. Sorry for the cryptic changelog.
If you want to see the exact changes, please check the code until revision 32 at
http://code.google.com/p/hfss-api/source/list]
	- Added a bunch of new functions.