@@ -1,5 +1,5 @@
 % ----------------------------------------------------------------------------
-% function hfssSetColor(fid, Object, Color)
+% function hfssSetColor(fid, Objects, Color)
 % 
 % Description :
 % -------------
@@ -8,7 +8,8 @@
 % Parameters :
 % ------------
 % fid     - file identifier of the HFSS script file.
-% Object  - name of the object whose color requires to be changed.
+% Objects - cell array with name(s) of the object(s) whose color require(s)
+%           to be changed.
 % Color   - [3x1 vector] represents the [R, G, B] components of the color.
 % 
 % Note :
@@ -19,7 +20,15 @@
 % fid = fopen('myantenna.vbs', 'wt');
 % ... 
 % hfssSetColor(fid, 'Substrate', [0, 64, 0]);
+% hfssSetColor(fid, {'Sub1', 'Sub2'}, [0, 64, 0]);
 %
+% ----------------------------------------------------------------------------
+
+% ----------------------------------------------------------------------------
+% CHANGELOG
+%
+% ??-???-????: *Initial release.
+% 09-Sep-2020: *It can set a color to several objects simultaneously.
 % ----------------------------------------------------------------------------
 
 % ----------------------------------------------------------------------------
@@ -41,14 +50,23 @@
 %
 % Copyright 2004, Vijay Ramasami (rvc@ku.edu)
 % ----------------------------------------------------------------------------
+function hfssSetColor(fid, Objects, Color)
 
-function hfssSetColor(fid, Object, Color)
+if (~iscell(Objects))
+    Objects = cellstr(Objects);
+end
 
 fprintf(fid, '\n');
 fprintf(fid, 'oEditor.ChangeProperty _\n');
 fprintf(fid, '\tArray("NAME:AllTabs", _\n');
 fprintf(fid, '\t\tArray("NAME:Geometry3DAttributeTab", _\n');
-fprintf(fid, '\t\t\tArray("NAME:PropServers", "%s"), _\n', Object);
+fprintf(fid, '\t\t\tArray("NAME:PropServers", ');
+
+for n = 1:numel(Objects)-1
+    fprintf(fid, '"%s", ', Objects{n});
+end
+fprintf(fid, '"%s"), _\n', Objects{end});
+
 fprintf(fid, '\t\t\tArray("NAME:ChangedProps",  _\n');
 fprintf(fid, '\t\t\t\tArray("NAME:Color", "R:=", %d, "G:=", %d, "B:=", %d) _\n', ...
         Color(1), Color(2), Color(3));
